--- a/index.html
+++ b/index.html
@@ -8,30 +8,30 @@
   <body>
     <div id="header">
       <h1>Broadway Design</h1>
-      <p>Home</p>
-      <p>Process</p>
-      <p>Work</p>
-      <p>Team</p>
-      <p>Contact</p>
+      <p><a href="#header">Home</a></p>
+      <p><a href="#process">Process</a></p>
+      <p><a href="#work">Work</a></p>
+      <p><a href="#team">Team</a></p>
+      <p><a href="#contact">Contact</a></p>
     </div>
-      <h2>Our Process</h2>
+      <div id="process"><h2>Our Process</h2></div>
       <h3>Identify</h3>
       <p>We focus on the most important details.</p>
       <h3>Understand</h3>
       <p>We study our projects inside and out.</p>
       <h3>Execute</h3>
       <p>We put everything we have into our work.</p>
-      <h3 id="white">Designed in New York</p>
-      <h3>Portfolio</h3>
+      <h3 id="white">Designed in New York</h3>
+      <div id="work"><h3>Portfolio</h3></div>
       <p>Coming Soon</p>
-      <h3>Team</h3>
+      <div id="team"><h3>Team</h3></div>
       <p>We're Hiring!</p>
-      <h3>Contact</h3>
+      <div id="contact"><h3>Contact</h3></div>
       <p>Phone: (555)-555-5555</p>
       <p>Email: test@example.com</p>
       <p>Twitter: @test</p>
-    <div id="footer">
-      <p>© Broadway 2016 Home About Work Team Contact</p>
-    </div>
+      <div id="footer">
+        <p>© Broadway 2016 <a href="#header" id="footer">Home</a> <a href="#process" id="footer">About</a> <a href="#work" id="footer">Work</a> <a href="#team" id="footer">Team</a> <a href="#contact" id="footer">Contact</a></p>
+      </div>
   </body>
 </html>
